--- a/posts/2018-05-25.vue-templates-in-jsx.md
+++ b/posts/2018-05-25.vue-templates-in-jsx.md
@@ -232,7 +232,7 @@ You *can* use PascalCase for components and camelCase for props your `.vue` file
   ></post-list>
 
   <!-- This also works, but not in in-DOM templates -->
-  <!-- Con't forget you can't change event casing! -->
+  <!-- Don't forget you can't change event casing! -->
   <PostList
     posts="posts"
     linkColor="blue"
